--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,7 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-
 - title: Splitter nytt og sentralt i Oslo
   id: splitter-nytt-og-sentralt-i-oslo
   location: Clarion Hotel The Hub, Oslo, Norge
@@ -10,7 +9,7 @@
   price: 1050
   price-description: per rom per natt
   saved: 32
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92425/3b1d2886_cf0c_46cc_84cc_e9fcddcd7764.jpg
   link: https://no.secretescapes.com/splitter-nytt-og-sentralt-i-oslo-clarion-hotel-the-hub-oslo-norge-no-no/sale
   sale-id: 92425
@@ -23,23 +22,10 @@
   price: 1250
   price-description: per rom per natt
   saved: 37
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/12765/052a5d9e_4ebe_4dc0_93a1_1b22f47feb7d.jpg
   link: https://no.secretescapes.com/bare-minutter-unna-bryggen-first-hotel-marin-bergen-norge-no1/sale
   sale-id: 92771
-  domestic: true
-
-- title: Mellom fjell og fjord
-  id: mellom-fjell-og-fjord
-  location: Magic Hotel Korskirken, Bergen, Norge
-  description: Moderne designhotell i Bergens historiske sentrum, inkludert frokost og restaurantrabatt
-  price: 1090
-  price-description: per rom per natt
-  saved: 27
-  expires: 2019/05/07
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74332/ed3a511b_23de_4af9_829a_cac9a16c7f85.jpg
-  link: https://no.secretescapes.com/mellom-fjell-og-fjord-magic-hotel-korskirken-bergen-norge-no-no/sale
-  sale-id: 92745
   domestic: true
 
 - title: Basseng, trening og restauranter i Stavanger
@@ -49,7 +35,7 @@
   price: 950
   price-description: per rom per natt
   saved: 42
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/14180/6f74936c_c658_4fb1_8090_8993cf7ac642.jpg
   link: https://no.secretescapes.com/basseng-trening-og-restauranter-i-stavanger-radisson-blu-royal-hotel-stavanger-stavanger/sale
   sale-id: 92455
@@ -59,19 +45,6 @@
 # NON DOMESTIC OFFERS
 ################################################################################
 
-- title: Klassisk luksus på Via Veneto
-  id: klassisk-luksus-på-via-veneto
-  location: Grand Hotel Palace, Rom, Italia
-  description: Luksuriøst boutiquehotell beliggende i en av Italias mest glamorøse gater, inkl. frokost
-  price: 1750
-  price-description: per rom per natt
-  saved: 49
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
-  link: https://no.secretescapes.com/klassisk-luksus-paa-via-veneto-grand-hotel-palace-rom-italia-no/sale
-  sale-id: 91466
-  domestic: false
-
 - title: Femstjerners luksus ved stranden på Mallorca
   id: femstjerners-luksus-ved-stranden-på-mallorca
   location: FERGUS Style Tobago, Mallorca, Spania
@@ -79,21 +52,86 @@
   price: 1224
   price-description: per room per natt
   saved: 60
-  expires: 2019/05/08
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88670/f725f953_5e7e_4791_81fd_ab4102067d71.jpg
   link: https://no.secretescapes.com/femstjerners-luksus-ved-stranden-paa-mallorca-fergus-style-tobago-mallorca-spania/sale
   sale-id: 92349
   domestic: false
 
-- title: Nyt de varme solstrålene
-  id: nyt-de-varme-solstrålene
-  location: Arrecife Gran Hotel & Spa, Lanzarote, Spania
-  description: Suite på femstjerners strandhotell på Lanzarote, inkludert halvpensjon og adgang til spa
-  price: 1464
-  price-description: per suite per natt
-  saved: 35
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/69886/7b710f30_5188_4826_aa0f_d763699bcfa2.jpg
-  link: https://no.secretescapes.com/nyt-de-varme-solstraalene-arrecife-gran-hotel-and-spa-lanzarote-spania-no/sale
-  sale-id: 92916
+- title: Lev jetsetlivet på Sardinia
+  id: lev-jetsetlivet-på-sardinia
+  location: Colonna Pevero, Sardinia, Italia
+  description: Velkomstdrink og sparabatt på Sardinias smaragdkyst – med halvpensjon inkludert
+  price: 2020
+  price-description: per rom per natt
+  saved: 62
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/17278/e43ecae6_3668_4fec_bb58_361a8589f81c.jpg
+  link: https://no.secretescapes.com/lev-jetsetlivet-paa-sardinia-colonna-pevero-sardinia-italia-no-no/sale
+  sale-id: 93454
+  domestic: false
+
+- title: Klassisk og elegant i Roma
+  id: klassisk-og-elegant-i-roma
+  location: Grand Hotel Ritz, Roma, Italia
+  description: Et elegant opphold i nærheten av Parioli-området i Roma, inkl. frokost og ekstragoder
+  price: 1268
+  price-description: per rom per natt
+  saved: 42
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/33324/2ec48dca_bed6_4bfa_970d_2810691a9e47.jpg
+  link: https://no.secretescapes.com/klassisk-og-elegant-i-roma-grand-hotel-ritz-roma-italia-no/sale
+  sale-id: 93240
+  domestic: false
+
+- title: Unikt hotell med magiske rom
+  id: unikt-hotell-med-magiske-rom
+  location: Château Monfort, Milano, Italia
+  description: Femstjerners opphold i Milano, inkludert velkomstdrink og adgang til spa
+  price: 1683
+  price-description: per rom per natt
+  saved: 45
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
+  link: https://no.secretescapes.com/unikt-hotell-med-magiske-rom-chateau-monfort-milano-italia-no6/sale
+  sale-id: 93672
+  domestic: false
+
+- title: Femstjerners velværedrøm på Ischia
+  id: femstjerners-velværedrøm-på-ischia
+  location: Punta Molino Beach Resort & Spa, Ischia, Italia
+  description: Sparesort med vakker beliggenhet og privat strand, inkludert frokost og ekstragoder
+  price: 1454
+  price-description: per rom per natt
+  saved: 48
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/59767/b5beae62_148c_44ce_a6e6_87ada268cfea.jpg
+  link: https://no.secretescapes.com/femstjerners-velvaeredroem-paa-ischia-punta-molino-beach-resort-and-spa-ischia-italia/sale
+  sale-id: 93468
+  domestic: false
+
+- title: Vin og design i Stockholm
+  id: vin-og-design-i-stockholm
+  location: The Winery Hotel, Stockholm, Sverige
+  description: Svensk designdrøm for vinelskere rett utenfor Stockholm, inkludert frokost og mer
+  price: 1007
+  price-description: per rom per natt
+  saved: 46
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92791/9e08b0de_ac52_4b81_b333_fe12ae3a960a.jpg
+  link: https://no.secretescapes.com/vin-og-design-i-stockholm-the-winery-hotel-stockholm-sverige-no1/sale
+  sale-id: 92791
+  domestic: false
+
+- title: Komplett spaopplevelse i Sverige
+  id: komplett-spaopplevelse-i-sverige
+  location: Vann Spa Hotell & Konferens, Brastad, Sverige
+  description: Firestjerners spahotell ved idylliske Gullmarsfjord, inkl. halvpensjon og adgang til spa
+  price: 1453
+  price-description: per rom per natt
+  saved: 32
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86348/23555bdf_3d75_4cdf_8695_8385008f2aae.jpg
+  link: https://no.secretescapes.com/komplett-spaopplevelse-i-sverige-vann-spa-hotell-and-konferens-brastad-sverige-1/sale
+  sale-id: 93127
   domestic: false
