--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,45 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Trendigt koncepthotell i Malmö
-  id: trendigt-koncepthotell-i-malmö
-  location: Story Hotel Studio Malmö, Malmö
-  description: Lekfullt och kreativt designat hotell nära centralstationen, inkl. frukost
-  price: 850
-  price-description: per rum per natt
-  saved: 38
-  expires: 2019/05/07
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/70367/0ad2838e_a60a_4367_b92c_b480008825e2.jpg
-  link: https://www.secretescapes.se/trendigt-koncepthotell-i-malmo-story-hotel-studio-malmo-malmo-se-1/sale
-  sale-id: 92459
-  domestic: true
-
-- title: Nyöppnat designhotell i Helsingborg
-  id: nyöppnat-designhotell-i-helsingborg
-  location: The Vault Hotel, Helsingborg
-  description: Bankpalats i modern skrud i hjärtat av sundets pärla, inkl. frukost
-  price: 950
-  price-description: per rum per natt
-  saved: 23
-  expires: 2019/05/07
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/87481/4333fda9_4ccf_4c3f_be5e_64ac126a275f.jpg
-  link: https://www.secretescapes.se/nyoppnat-designhotell-i-helsingborg-the-vault-hotel-helsingborg/sale
-  sale-id: 92569
-  domestic: true
-
-- title: Elegant vistelse på Östermalm
-  id: elegant-vistelse-på-östermalm
-  location: Mornington Hotel Stockholm City, Stockholm
-  description: Stilrent boende med bastu och restaurang, inkl. frukostbuffé
-  price: 960
-  price-description: per rum per natt
-  saved: 20
-  expires: 2019/05/07
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92808/9f6a49d5_02c1_45ad_911a_d5e26ad51a81.jpg
-  link: https://www.secretescapes.se/elegant-vistelse-paa-ostermalm-mornington-hotel-stockholm-city-stockholm/sale
-  sale-id: 92808
-  domestic: true
-
 - title: Designhotell med vinfokus i Solna
   id: designhotell-med-vinfokus-i-solna
   location: The Winery Hotel, Solna, Stockholm
@@ -48,7 +9,7 @@
   price: 1100
   price-description: per rum per natt
   saved: 46
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92791/9e08b0de_ac52_4b81_b333_fe12ae3a960a.jpg
   link: https://www.secretescapes.se/designhotell-med-vinfokus-i-solna-the-winery-hotel-solna-stockholm-se/sale
   sale-id: 92791
@@ -61,7 +22,7 @@
   price: 2150
   price-description: per rum per natt
   saved: 36
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92995/0b6f3bcc_4f01_41a0_94ea_7ecf976a1718.jpg
   link: https://www.secretescapes.se/fin-utsikt-over-sundsvall-hotell-sodra-berget-sundsvall-se-2/sale
   sale-id: 92995
@@ -74,28 +35,28 @@
   price: 750
   price-description: per rum per natt
   saved: 33
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93048/e85cd150_e290_4617_9ba8_0c1f008758d5.jpg
   link: https://www.secretescapes.se/malmos-senaste-hotelltillskott-quality-hotel-the-mill-malmo-se01/sale
   sale-id: 93048
   domestic: true
 
+- title: Spahotell med utsikt över Gullmarsfjorden
+  id: spahotell-med-utsikt-över-gullmarsfjorden
+  location: Vann Spa Hotell & Konferens, Brastad, Bohuslän
+  description: Avkopplande spavistelse på bildsköna västkusten, inkl. frukost, tvårätters och spaentré
+  price: 1590
+  price-description: per rum per natt
+  saved: 32
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86348/23555bdf_3d75_4cdf_8695_8385008f2aae.jpg
+  link: https://www.secretescapes.se/spahotell-med-utsikt-over-gullmarsfjorden-vann-spa-hotell-and-konferens-brastad-bohuslaen-se-2/sale
+  sale-id: 93127
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: Klassisk lyx i Rom
-  id: klassisk-lyx-i-rom
-  location: Grand Hotel Palace, Rom, Italien
-  description: Boende på femstjärnigt hotell mitt i hjärtat av Rom, inkl. frukost och ett glas prosecco
-  price: 1890
-  price-description: per rum per natt
-  saved: 49
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
-  link: https://www.secretescapes.se/klassisk-lyx-i-rom-grand-hotel-palace-rom-italien/sale
-  sale-id: 91466
-  domestic: false
 
 - title: Femstjärnig vistelse i Florens
   id: femstjärnig-vistelse-i-florens
@@ -104,8 +65,8 @@
   price: 3300
   price-description: per rum per natt
   saved: 26
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92223/e2e157e9_54e7_42e9_aff2_34ac91b4fc68.jpg
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92223/03a5965e_10b2_42f1_8810_dd3fa78be340.jpg
   link: https://www.secretescapes.se/femstjaernig-vistelse-i-florens-hotel-helvetia-and-bristol-florens-italien/sale
   sale-id: 92223
   domestic: false
@@ -117,23 +78,10 @@
   price: 1340
   price-description: per rum per natt
   saved: 60
-  expires: 2019/05/08
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88670/b8b1d99f_4389_45ec_9808_c593f040320c.jpg
   link: https://www.secretescapes.se/femstjaernig-all-inclusive-paa-skona-mallorca-fergus-style-tobago-palmanova-spanien/sale
   sale-id: 92349
-  domestic: false
-
-- title: Elegant boutiquehotell på Mallorca
-  id: elegant-boutiquehotell-på-mallorca
-  location: Hotel Sa Torre Mallorca Resort, Llucmajor, Mallorca, Spanien
-  description: Exklusivt boende i en historisk byggnad, med spa, pool och strandklubb, inkl. frukost och spaentré
-  price: 1710
-  price-description: per rum per natt
-  saved: 42
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92612/27957713_0a69_43e2_a3f8_7c36f7937c51.jpg
-  link: https://www.secretescapes.se/elegant-boutiquehotell-paa-mallorca-hotel-sa-torre-mallorca-resort-llucmajor-mallorca-spanien/sale
-  sale-id: 92612
   domestic: false
 
 - title: Splitternytt designhotell i Oslo
@@ -143,7 +91,7 @@
   price: 1150
   price-description: per rum per natt
   saved: 32
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92425/3b1d2886_cf0c_46cc_84cc_e9fcddcd7764.jpg
   link: https://www.secretescapes.se/splitternytt-designhotell-i-oslo-clarion-hotel-the-hub-oslo-norge-se-1/sale
   sale-id: 92425
@@ -156,62 +104,10 @@
   price: 1040
   price-description: per rum per natt
   saved: 42
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/14180/6f74936c_c658_4fb1_8090_8993cf7ac642.jpg
   link: https://www.secretescapes.se/modern-vistelse-i-vackra-stavanger-radisson-blu-royal-hotel-stavanger-norge/sale
   sale-id: 92455
-  domestic: false
-
-- title: Grandiost hotell med takterrass i Wien
-  id: grandiost-hotell-med-takterrass-i-wien
-  location: Grand Ferdinand, Wien, Österrike
-  description: Stil och elegans på ett vackert hotell i Wien, inkl. frukost
-  price: 1770
-  price-description: per rum per natt
-  saved: 48
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28909/d68f7986_d810_4983_a361_38ebdf4af902.jpg
-  link: https://www.secretescapes.se/grandiost-hotell-med-takterrass-grand-ferdinand-wien-osterrike01/sale
-  sale-id: 92599
-  domestic: false
-
-- title: Stilsäker tillflyktsort i München
-  id: stilsäker-tillflyktsort-i-münchen
-  location: Ruby Lilly, München, Tyskland
-  description: Ultra-hipp vistelse på urbant stadshotell nära Münchens stadskärna, inkl. frukost
-  price: 1040
-  price-description: per rum per natt
-  saved: 45
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/46766/538e3883_bb9f_4f2e_8b0c_89f14eed5db6.jpg
-  link: https://www.secretescapes.se/stilsaeker-tillflyktsort-i-muenchen-ruby-lilly-muenchen-tyskland-se/sale
-  sale-id: 92439
-  domestic: false
-
-- title: Toscanskt hotell med gourmetfokus
-  id: toscanskt-hotell-med-gourmetfokus
-  location: Grand Hotel Principe di Piemonte, Toscana, Italien
-  description: Femstjärnig vistelse med gourmetmat och vackra vyer på Toscanas kust, inkl. frukost, m.m.
-  price: 1050
-  price-description: per rum per natt
-  saved: 52
-  expires: 2019/05/03
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10181/6e6e6210_3c76_4c07_9e43_75d257e0f881.jpg
-  link: https://www.secretescapes.se/toscanskt-hotell-med-gourmetfokus-grand-hotel-principe-di-piemonte-toscana-italien/sale
-  sale-id: 92886
-  domestic: false
-
-- title: Snygg designvistelse på Lanzarote
-  id: snygg-designvistelse-på-lanzarote
-  location: Arrecife Gran Hotel & Spa Lanzarote, Kanarieöarna, Spanien
-  description: Femstjärnig tillflyktsort på Lanzarote, inkl. halvpension och spaentré
-  price: 1600
-  price-description: per svit per natt
-  saved: 35
-  expires: 2019/05/08
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/69886/7b710f30_5188_4826_aa0f_d763699bcfa2.jpg
-  link: https://www.secretescapes.se/snygg-designvistelse-paa-lanzarote-arrecife-gran-hotel-and-spa-lanzarote-kanarieoarna-spanien/sale
-  sale-id: 92916
   domestic: false
 
 - title: Romantiskt hotell på Gran Canaria
@@ -221,7 +117,7 @@
   price: 1650
   price-description: per rum per natt
   saved: 65
-  expires: 2019/05/08
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42035/680bde89_46f6_49a5_9f42_e700d53ea078.jpg
   link: https://www.secretescapes.se/romantiskt-hotell-paa-gran-canaria-hotel-casa-leon-gran-canaria-spanien/sale
   sale-id: 92865
@@ -234,21 +130,73 @@
   price: 1370
   price-description: per rum per natt
   saved: 37
-  expires: 2019/05/07
+  expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/67482/2014d755_3312_4fc6_9d5f_7954c8c0c8bb.jpg
   link: https://www.secretescapes.se/klassiskt-hotell-paa-historiska-bryggen-first-hotel-marin-bergen-norge/sale
   sale-id: 92771
   domestic: false
 
-- title: Spahotell med utsikt över Gullmarsfjorden
-  id: spahotell-med-utsikt-över-gullmarsfjorden
-  location: Vann Spa Hotell & Konferens, Brastad, Bohuslän
-  description: Avkopplande spavistelse på bildsköna västkusten, inkl. frukost, tvårätters och spaentré
-  price: 1590
+- title: Femstjärnigt hotell på Sardinien
+  id: femstjärnigt-hotell-på-sardinien
+  location: Colonna Pevero Hotel, Porto Cervo, Sardinien, Italien
+  description: Lev jetsetlivet på Sardiniens vackra Smaragdkust, inkl. halvpension och mer
+  price: 2230
   price-description: per rum per natt
-  saved: 32
-  expires: 2019/05/07
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86348/23555bdf_3d75_4cdf_8695_8385008f2aae.jpg
-  link: https://www.secretescapes.se/spahotell-med-utsikt-over-gullmarsfjorden-vann-spa-hotell-and-konferens-brastad-bohuslaen-se-2/sale
-  sale-id: 93127
+  saved: 62
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/17278/e43ecae6_3668_4fec_bb58_361a8589f81c.jpg
+  link: https://www.secretescapes.se/femstjaernigt-hotell-paa-sardinien-colonna-pevero-hotel-porto-cervo-sardinien-italien-01/sale
+  sale-id: 93454
+  domestic: false
+
+- title: Stuckaturer och guld i Rom
+  id: stuckaturer-och-guld-i-rom
+  location: Grand Hotel Ritz, Rom, Italien
+  description: Klassiskt, femstjärnigt hotell med spa, inkl. frukost och mer
+  price: 1390
+  price-description: per rum per natt
+  saved: 42
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/33324/2ec48dca_bed6_4bfa_970d_2810691a9e47.jpg
+  link: https://www.secretescapes.se/stuckaturer-och-guld-i-rom-grand-hotel-ritz-rom-italien/sale
+  sale-id: 93240
+  domestic: false
+
+- title: Ett sagoslott i Milano
+  id: ett-sagoslott-i-milano
+  location: Château Monfort, Milano, Italien
+  description: Fantastifullt sagoslott med spa i Milano, inkl. spaförmåner och frukost som tillval
+  price: 1850
+  price-description: per rum per natt
+  saved: 45
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
+  link: https://www.secretescapes.se/ett-sagoslott-i-milano-chateau-monfort-milano-italien01/sale
+  sale-id: 93672
+  domestic: false
+
+- title: Familjevänligt utanför Cádiz
+  id: familjevänligt-utanför-cádiz
+  location: Iberostar Royal Andalus, Chiclana de la Frontera, Spanien
+  description: Vackert boende längs Andalusiens soldränkta stränder, inkl. halvpension eller all-inclusive
+  price: 970
+  price-description: per rum per natt
+  saved: 27
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81665/67160b8f_0e0b_4d69_b0b2_1d212d09f800.jpg
+  link: https://www.secretescapes.se/familjevaenligt-utanfor-cadiz-iberostar-royal-andalus-chiclana-de-la-frontera-spanien/sale
+  sale-id: 93488
+  domestic: false
+
+- title: Femstjärnig wellnessvistelse i Marbella
+  id: femstjärnig-wellnessvistelse-i-marbella
+  location: Vincci Seleccion Estrella del Mar, Marbella, Spanien
+  description: Elegant och strandnära boende med wellnessavdelning och flera pooler, inkl. frukost och mer
+  price: 1830
+  price-description: per rum per natt
+  saved: 34
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9544/1464f44a_e84c_4bf5_8e6e_952a1bdb85f3.jpg
+  link: https://www.secretescapes.se/wellnessvistelse-i-marbella-vincci-seleccion-estrella-del-mar-marbella-spanien01/sale
+  sale-id: 93854
   domestic: false
