--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -59,7 +59,7 @@
 
       <h4 class="core-title core-title--xs space--lg">El Premio</h4>
       <ol class="continuing-list">
-        <li>Habrá dos (2) ganadores. El premio para cada ganador será a) dos noches con alojamiento y desayuno para dos (2) en un hotel de 4*/5* en España; b) el disfrute de un Lexus UX durante su fin de semana.</li>
+        <li>Habrá un (1) ganador. El premio para cada ganador será a) dos noches con alojamiento y desayuno para dos (2) en un hotel de 4/5 en España; b) el disfrute de un Lexus UX durante su fin de semana.</li>
         <ol class="ol--nested ol--letters">
           <li>La estancia deberá reservarse entre el 1 de octubre de 2019 y el 30 de abril de 2020. Está sujeta a disponibilidad y excluye las fechas restringidas.</li>
           <li>Sujeto a los términos y condiciones incluidos en el apartado «Términos y Condiciones».</li>
