--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -59,8 +59,7 @@
 
       <h4 class="core-title core-title--xs space--lg">Premien</h4>
       <ol class="continuing-list">
-        <li>Det blir to (2) vinnere. Premien for vinnerne vil være a) To netters opphold med frokost på for to (2) på et 4/5* hotell i Norge. B) Bruk av Lexus UX for varigheten av ditt weekendopphold.
-        </li>
+        <li>Det blir en (1) vinnere. Premien for vinnerne vil være a) To netters opphold med frokost på for to (2) på et 4/5* hotell i Norge. B) Bruk av Lexus UX for varigheten av ditt weekendopphold.</li>
         <ol class="ol--nested ol--letters">
           <li>Oppholdet må være tatt innen 30. april 2020. Det er underlagt tilgjengelighet og det inkluderer datoer som er opptatte</li>
           <li>Vilkår og betingelser gjelder - og er beskrevet på slutten av vilkår og betingelser</li>
