--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -60,7 +60,7 @@
 
       <h4 class="core-title core-title--xs space--lg">Priset</h4>
       <ol class="continuing-list">
-        <li>Det kommer att finnas två (2) vinnare. Priset för varje vinnare kommer att vara a) Två nätters vistelse med övernattning och frukost för två (2) personer på ett 4/5* hotell i Sverige b) Användning av en Lexus UX under hela din helgvistelse.</li>
+        <li>Det kommer att finnas ett (1) vinnare. Priset för varje vinnare kommer att vara a) Två nätters vistelse med övernattning och frukost för två (2) personer på ett 4/5* hotell i Sverige b) Användning av en Lexus UX under hela din helgvistelse.</li>
         <ol class="ol--nested ol--letters">
           <li>Vistelsen måste ske innan den 30 april 2020. Den är beroende av tillgänglighet och inkluderar undantagna datum</li>
           <li>Allmänna villkor gäller och finns längst ner i dokumentet under Lexus UX allmänna villkor</li>
