--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -61,10 +61,12 @@
       <h4 class="core-title core-title--xs space--lg">Priset</h4>
       <ol class="continuing-list">
         <li>Det kommer att finnas ett (1) vinnare. Priset för varje vinnare kommer att vara a) Två nätters vistelse med övernattning och frukost för två (2) personer på ett 4/5* hotell i Sverige b) Användning av en Lexus UX under hela din helgvistelse.</li>
-        <ol class="ol--nested ol--letters">
-          <li>Vistelsen måste ske innan den 30 april 2020. Den är beroende av tillgänglighet och inkluderar undantagna datum</li>
-          <li>Allmänna villkor gäller och finns längst ner i dokumentet under Lexus UX allmänna villkor</li>
-        </ol>
+        <div class="space--xs">
+          <ol class="ol--nested ol--letters">
+            <li>Vistelsen måste ske innan den 30 april 2020. Den är beroende av tillgänglighet och inkluderar undantagna datum</li>
+            <li>Allmänna villkor gäller och finns längst ner i dokumentet under Lexus UX allmänna villkor</li>
+          </ol>
+        </div>
         <li>I händelse av omständigheter utanför vår kontroll är arrangören inte ansvarig för förseningar avseende resor eller leverans.</li>
         <li>Arrangören förbehåller sig rätten att publicera vinnarens namn, stad och län eller att offentliggöra en eventuell prisutdelningspresentation efter det att dragningen har skett. Om vinnaren inte vill att sådana uppgifter ska offentliggöras, måste han/hon meddela arrangören vid tidpunkten för underrättandet om att han/hon har vunnit.</li>
         <li>Priserna är inte överlåtbara och inga kontanter eller kreditalternativ kommer att ersätta de priser som erbjuds. I händelse av att priserna som erbjuds är otillgängliga på grund av omständigheter utanför vår kontroll, förbehåller sig arrangören rätten att erbjuda ett alternativt pris av samma eller högre värde.</li>
